HDMI-FULLHD by Eduardo

--- a/config-board-shuttle-hc3.2
+++ b/config-board-shuttle-hc3.2
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.36.3
-# Wed Sep 28 09:17:45 2011
+# Sat Oct  1 00:33:42 2011
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -39,7 +39,7 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE="arm-eabi-"
-# CONFIG_LOCALVERSION is not set
+CONFIG_LOCALVERSION="VegaComb-Release-by-TeamNewCo"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -755,22 +755,22 @@ CONFIG_BT_SCO=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
 CONFIG_BT_BNEP=y
-CONFIG_BT_BNEP_MC_FILTER=y
-CONFIG_BT_BNEP_PROTO_FILTER=y
+# CONFIG_BT_BNEP_MC_FILTER is not set
+# CONFIG_BT_BNEP_PROTO_FILTER is not set
 CONFIG_BT_HIDP=y
 
 #
 # Bluetooth device drivers
 #
 # CONFIG_BT_HCIBTUSB is not set
-CONFIG_BT_HCIBTSDIO=y
+# CONFIG_BT_HCIBTSDIO is not set
 CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_H4=y
 CONFIG_BT_HCIUART_BCSP=y
-CONFIG_BT_HCIUART_ATH3K=y
+# CONFIG_BT_HCIUART_ATH3K is not set
 # CONFIG_BT_HCIUART_LL is not set
 # CONFIG_BT_HCIBCM203X is not set
-CONFIG_BT_BLUESLEEP=y
+# CONFIG_BT_BLUESLEEP is not set
 # CONFIG_BT_HCIBPA10X is not set
 # CONFIG_BT_HCIBFUSB is not set
 # CONFIG_BT_HCIVHCI is not set
@@ -1126,7 +1126,7 @@ CONFIG_INPUT_FF_MEMLESS=y
 # Userland interfaces
 #
 # CONFIG_INPUT_MOUSEDEV is not set
-CONFIG_INPUT_JOYDEV=y
+# CONFIG_INPUT_JOYDEV is not set
 CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_EVBUG is not set
 CONFIG_INPUT_KEYRESET=y
@@ -1267,7 +1267,11 @@ CONFIG_DEVKMEM=y
 #
 # Serial drivers
 #
-# CONFIG_SERIAL_8250 is not set
+CONFIG_SERIAL_8250=y
+CONFIG_SERIAL_8250_CONSOLE=y
+CONFIG_SERIAL_8250_NR_UARTS=4
+CONFIG_SERIAL_8250_RUNTIME_UARTS=4
+# CONFIG_SERIAL_8250_EXTENDED is not set
 
 #
 # Non-8250 serial port support
@@ -1276,6 +1280,7 @@ CONFIG_SERIAL_TEGRA=y
 # CONFIG_SERIAL_MAX3100 is not set
 # CONFIG_SERIAL_MAX3107 is not set
 CONFIG_SERIAL_CORE=y
+CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_TIMBERDALE is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
 # CONFIG_SERIAL_ALTERA_UART is not set
@@ -1682,7 +1687,7 @@ CONFIG_TEGRA_OVERLAY=y
 CONFIG_FB_TEGRA=y
 CONFIG_TEGRA_NVMAP=y
 CONFIG_NVMAP_RECLAIM_UNPINNED_VM=y
-# CONFIG_NVMAP_ALLOW_SYSMEM is not set
+CONFIG_NVMAP_ALLOW_SYSMEM=y
 # CONFIG_NVMAP_CARVEOUT_KILLER is not set
 CONFIG_NVMAP_CARVEOUT_COMPACTOR=y
 # CONFIG_NVMAP_SEARCH_GLOBAL_HANDLES is not set
@@ -1990,9 +1995,9 @@ CONFIG_USB_ANDROID=y
 CONFIG_USB_ANDROID_ACM=y
 CONFIG_USB_ANDROID_ADB=y
 CONFIG_USB_ANDROID_MASS_STORAGE=y
-CONFIG_USB_ANDROID_MTP=y
+# CONFIG_USB_ANDROID_MTP is not set
 # CONFIG_USB_ANDROID_RNDIS is not set
-CONFIG_USB_ANDROID_ACCESSORY=y
+# CONFIG_USB_ANDROID_ACCESSORY is not set
 # CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_MULTI is not set
 # CONFIG_USB_G_HID is not set
@@ -2003,7 +2008,7 @@ CONFIG_USB_ANDROID_ACCESSORY=y
 # OTG and related infrastructure
 #
 CONFIG_USB_OTG_UTILS=y
-# CONFIG_USB_GPIO_VBUS is not set
+CONFIG_USB_GPIO_VBUS=y
 CONFIG_USB_ULPI=y
 CONFIG_USB_ULPI_VIEWPORT=y
 # CONFIG_NOP_USB_XCEIV is not set
@@ -2039,7 +2044,7 @@ CONFIG_RTC_LIB=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_HCTOSYS=y
 CONFIG_RTC_HCTOSYS_DEVICE="rtc0"
-# CONFIG_RTC_DEBUG is not set
+CONFIG_RTC_DEBUG=y
 
 #
 # RTC interfaces
