--- a/config-board-shuttle-hc3.2
+++ b/config-board-shuttle-hc3.2
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.36.3
-# Wed Nov  2 15:20:33 2011
+# Thu Nov  3 07:46:00 2011
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -1995,10 +1995,10 @@ CONFIG_USB_ANDROID=y
 CONFIG_USB_ANDROID_ACM=y
 CONFIG_USB_ANDROID_ADB=y
 CONFIG_USB_ANDROID_MASS_STORAGE=y
-# CONFIG_USB_ANDROID_MTP is not set
+CONFIG_USB_ANDROID_MTP=y
 CONFIG_USB_ANDROID_RNDIS=y
 # CONFIG_USB_ANDROID_RNDIS_WCEIS is not set
-# CONFIG_USB_ANDROID_ACCESSORY is not set
+CONFIG_USB_ANDROID_ACCESSORY=y
 # CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_MULTI is not set
 # CONFIG_USB_G_HID is not set
