--- a/config-board-shuttle-hc3.2
+++ b/config-board-shuttle-hc3.2
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.36.3
-# Sat Nov  5 17:33:54 2011
+# Tue Dec 13 15:35:37 2011
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -762,7 +762,7 @@ CONFIG_BT_HIDP=y
 #
 # Bluetooth device drivers
 #
-# CONFIG_BT_HCIBTUSB is not set
+CONFIG_BT_HCIBTUSB=y
 # CONFIG_BT_HCIBTSDIO is not set
 CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_H4=y
@@ -775,6 +775,7 @@ CONFIG_BT_HCIUART_BCSP=y
 # CONFIG_BT_HCIBFUSB is not set
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
+# CONFIG_BT_ATH3K is not set
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
@@ -1686,7 +1687,7 @@ CONFIG_TEGRA_DC=y
 CONFIG_TEGRA_OVERLAY=y
 CONFIG_FB_TEGRA=y
 CONFIG_TEGRA_NVMAP=y
-CONFIG_NVMAP_RECLAIM_UNPINNED_VM=y
+# CONFIG_NVMAP_RECLAIM_UNPINNED_VM is not set
 CONFIG_NVMAP_ALLOW_SYSMEM=y
 # CONFIG_NVMAP_CARVEOUT_KILLER is not set
 CONFIG_NVMAP_CARVEOUT_COMPACTOR=y
