--- a/config-board-shuttle-hc3.2
+++ b/config-board-shuttle-hc3.2
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.36.3
-# Thu Jan  5 01:08:50 2012
+# Fri Jan 20 11:16:33 2012
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -1239,8 +1239,6 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_GPIO_ROTARY_ENCODER is not set
 # CONFIG_INPUT_ADXL34X is not set
 # CONFIG_INPUT_ALPS_GPIO_SCROLLWHEEL is not set
-CONFIG_INPUT_BMA150=y
-CONFIG_INPUT_BMA150_I2C=y
 
 #
 # Hardware I/O ports
@@ -1305,6 +1303,8 @@ CONFIG_I2C_MUX=y
 # Multiplexer I2C Chip support
 #
 # CONFIG_I2C_MUX_PCA954x is not set
+CONFIG_BOSCH_BMA150=y
+CONFIG_BMA_150_XY_FLIP=y
 CONFIG_I2C_HELPER_AUTO=y
 
 #
@@ -1998,7 +1998,7 @@ CONFIG_USB_ANDROID_ADB=y
 CONFIG_USB_ANDROID_MASS_STORAGE=y
 CONFIG_USB_ANDROID_MTP=y
 CONFIG_USB_ANDROID_RNDIS=y
-CONFIG_USB_ANDROID_RNDIS_WCEIS=y
+# CONFIG_USB_ANDROID_RNDIS_WCEIS is not set
 CONFIG_USB_ANDROID_ACCESSORY=y
 # CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_MULTI is not set
@@ -2261,7 +2261,11 @@ CONFIG_YAFFS_DISABLE_BLOCK_REFRESHING=y
 # CONFIG_JFFS2_FS is not set
 # CONFIG_LOGFS is not set
 # CONFIG_CRAMFS is not set
-# CONFIG_SQUASHFS is not set
+CONFIG_SQUASHFS=y
+# CONFIG_SQUASHFS_XATTR is not set
+CONFIG_SQUASHFS_LZO=y
+CONFIG_SQUASHFS_EMBEDDED=y
+CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=2
 # CONFIG_VXFS_FS is not set
 # CONFIG_MINIX_FS is not set
 # CONFIG_OMFS_FS is not set
@@ -2559,6 +2563,7 @@ CONFIG_CRC7=y
 CONFIG_LIBCRC32C=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
+CONFIG_LZO_DECOMPRESS=y
 CONFIG_DECOMPRESS_GZIP=y
 CONFIG_REED_SOLOMON=y
 CONFIG_REED_SOLOMON_ENC8=y
