Please read commit message
This adds unionfs support and xattr for unionfs, squashfs and removes ext2 support as the ext4 module does this.
Please read the last commit message if you haven't already.

--- a/config-board-shuttle-hc3.2
+++ b/config-board-shuttle-hc3.2
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.36.3
-# Fri Jan 20 11:16:33 2012
+# Sun Jan 22 16:21:58 2012
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -2173,9 +2173,7 @@ CONFIG_VT6656=m
 #
 # File systems
 #
-CONFIG_EXT2_FS=y
-# CONFIG_EXT2_FS_XATTR is not set
-# CONFIG_EXT2_FS_XIP is not set
+# CONFIG_EXT2_FS is not set
 # CONFIG_EXT3_FS is not set
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_USE_FOR_EXT23=y
@@ -2241,6 +2239,9 @@ CONFIG_TMPFS=y
 CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
+CONFIG_UNION_FS=y
+CONFIG_UNION_FS_XATTR=y
+# CONFIG_UNION_FS_DEBUG is not set
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
 # CONFIG_BEFS_FS is not set
@@ -2262,7 +2263,7 @@ CONFIG_YAFFS_DISABLE_BLOCK_REFRESHING=y
 # CONFIG_LOGFS is not set
 # CONFIG_CRAMFS is not set
 CONFIG_SQUASHFS=y
-# CONFIG_SQUASHFS_XATTR is not set
+CONFIG_SQUASHFS_XATTR=y
 CONFIG_SQUASHFS_LZO=y
 CONFIG_SQUASHFS_EMBEDDED=y
 CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=2
