Please read previous commit messages re-enable 32bit depth and 256mb ram enable zram in kernel

--- a/config-board-shuttle-hc3.2
+++ b/config-board-shuttle-hc3.2
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.36.3
-# Sun Jan 22 16:21:58 2012
+# Mon Jan 23 19:54:42 2012
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -39,7 +39,7 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE="arm-eabi-"
-CONFIG_LOCALVERSION="VegaComb-Release-by-TeamNewCo"
+CONFIG_LOCALVERSION="wooshy1-"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -2158,7 +2158,8 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_VT6656=m
 # CONFIG_FB_UDL is not set
 # CONFIG_IIO is not set
-# CONFIG_ZRAM is not set
+CONFIG_ZRAM=m
+CONFIG_ZRAM_STATS=y
 # CONFIG_BATMAN_ADV is not set
 # CONFIG_FB_SM7XX is not set
 
@@ -2564,6 +2565,7 @@ CONFIG_CRC7=y
 CONFIG_LIBCRC32C=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
+CONFIG_LZO_COMPRESS=m
 CONFIG_LZO_DECOMPRESS=y
 CONFIG_DECOMPRESS_GZIP=y
 CONFIG_REED_SOLOMON=y
